[package]
name = "generative_sketches"
version = "0.1.0"
authors = ["Aleks Pickle <aleks.work2222@gmail.com>"]
edition = "2018"

[dependencies]
nannou = "0.14.1"
rand = "0.7.3"
miniquad = "0.2.55"
image= "0.23.8"
termion = "*"

[lib]
name = "utils"
path = "src/utils.rs"

[[example]]
name = "lines"
path = "src/lines.rs"

[[example]]
name = "joy_division"
path = "src/joy_division.rs"

[[example]]
name = "flicker"
path = "src/flicker.rs"